syntax = "proto3";
package products;

option go_package = "github.com/phamhoangnam0890/product-management-service/app/proto/products";

// ログイン
service LoginService {

  rpc Login (LoginRequest) returns (LoginResponse) {
  }
}

message LoginRequest {
  string id = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_name = 2;
}